/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.DataHub.MeteringPoints.IntegrationEventContracts";

/**
 * This message is sent out when a metering point is connected.
 */
message ConsumptionMeteringPointCreated {
  enum NetSettlementGroup {
    NSG_ZERO = 0;
    NSG_ONE = 1;
    NSG_TWO = 2;
    NSG_THREE = 3;
    NSG_SIX = 4;
    NSG_NINETYNINE = 5;
  }
  
  enum ProductType {
    PT_TARIFF = 0;
    PT_FUELQUANTITY = 1;
    PT_POWERACTIVE = 2;
    PT_POWERREACTIVE = 3;
    PT_ENERGYACTIVE = 4;
    PT_ENERGYREACTIVE = 5;
  }
  
  enum SettlementMethod {
    SM_FLEX = 0;
    SM_PROFILED = 1;
    SM_NONPROFILED = 2;  
  }
  
  string MeteringPointId = 1;
  string Gsrn = 2;
  string GridAreaCode = 3;
  SettlementMethod Settlement_Method = 4;
  string MeteringMethod = 5;
  string MeterReadingPeriodicity = 6;
  NetSettlementGroup NetSettlement_Group = 7;
  ProductType Product = 8;  
  string EffectiveDate = 9;
}
